[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/WonderSimulator.gd" type="Script" id=1]
[ext_resource path="res://fonts/font_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/resources/diamond.png" type="Texture" id=4]
[ext_resource path="res://assets/resources/marble.png" type="Texture" id=5]
[ext_resource path="res://assets/resources/mercury.png" type="Texture" id=6]
[ext_resource path="res://assets/resources/oil.png" type="Texture" id=7]

[node name="Simulator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EraPanel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.15
color = Color( 0.380392, 0.380392, 0.380392, 1 )

[node name="Label" type="Label" parent="EraPanel"]
anchor_right = 1.0
anchor_bottom = 0.5
custom_fonts/font = ExtResource( 3 )
text = "Ancient Era"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="EraPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="EraPanel/HBox"]
margin_right = 622.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="EraPanel/HBox/HBox"]
margin_right = 490.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.25098, 0.0823529, 0.407843, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "Cultural  :"
align = 2
valign = 1

[node name="Texture" type="TextureRect" parent="EraPanel/HBox/HBox"]
margin_left = 494.0
margin_right = 622.0
margin_bottom = 108.0
rect_min_size = Vector2( 128, 64 )
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="VSeparator" type="VSeparator" parent="EraPanel/HBox"]
margin_left = 632.0
margin_right = 636.0
margin_bottom = 108.0

[node name="HBox2" type="HBoxContainer" parent="EraPanel/HBox"]
margin_left = 646.0
margin_right = 1268.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="EraPanel/HBox/HBox2"]
margin_right = 490.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.772549, 0.796078, 0.458824, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "Economic  :"
align = 2
valign = 1

[node name="Texture" type="TextureRect" parent="EraPanel/HBox/HBox2"]
margin_left = 494.0
margin_right = 622.0
margin_bottom = 108.0
rect_min_size = Vector2( 128, 64 )
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VSeparator2" type="VSeparator" parent="EraPanel/HBox"]
margin_left = 1278.0
margin_right = 1282.0
margin_bottom = 108.0

[node name="HBox3" type="HBoxContainer" parent="EraPanel/HBox"]
margin_left = 1292.0
margin_right = 1914.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="EraPanel/HBox/HBox3"]
margin_right = 490.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.564706, 0.0666667, 0.0666667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "Militaristic  :"
align = 2
valign = 1

[node name="Texture" type="TextureRect" parent="EraPanel/HBox/HBox3"]
margin_left = 494.0
margin_right = 622.0
margin_bottom = 108.0
rect_min_size = Vector2( 128, 64 )
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="VSeparator3" type="VSeparator" parent="EraPanel/HBox"]
margin_left = 1924.0
margin_right = 1928.0
margin_bottom = 108.0

[node name="HBox4" type="HBoxContainer" parent="EraPanel/HBox"]
margin_left = 1938.0
margin_right = 2560.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="EraPanel/HBox/HBox4"]
margin_right = 490.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.0862745, 0.0941176, 0.294118, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "Scientific  :"
align = 2
valign = 1

[node name="Texture" type="TextureRect" parent="EraPanel/HBox/HBox4"]
margin_left = 494.0
margin_right = 622.0
margin_bottom = 108.0
rect_min_size = Vector2( 128, 64 )
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Undo" type="Button" parent="."]
margin_right = 390.0
margin_bottom = 115.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
disabled = true
enabled_focus_mode = 0
text = "Undo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lock" type="Button" parent="."]
margin_left = 390.0
margin_right = 780.0
margin_bottom = 115.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
text = "Lock"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -369.0
margin_bottom = 110.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxCards" type="HBoxContainer" parent="."]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Culture" type="CenterContainer" parent="HBoxCards"]
margin_right = 637.0
margin_bottom = 936.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Economy" type="CenterContainer" parent="HBoxCards"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 936.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Military" type="CenterContainer" parent="HBoxCards"]
margin_left = 1282.0
margin_right = 1919.0
margin_bottom = 936.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Science" type="CenterContainer" parent="HBoxCards"]
margin_left = 1923.0
margin_right = 2560.0
margin_bottom = 936.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxBuild" type="HBoxContainer" parent="."]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -10.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Culture" type="Button" parent="HBoxBuild"]
margin_right = 600.0
margin_bottom = 114.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Build"

[node name="Economy" type="Button" parent="HBoxBuild"]
margin_left = 640.0
margin_right = 1240.0
margin_bottom = 114.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Build"

[node name="Military" type="Button" parent="HBoxBuild"]
margin_left = 1280.0
margin_right = 1880.0
margin_bottom = 114.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Build"

[node name="Science" type="Button" parent="HBoxBuild"]
margin_left = 1920.0
margin_right = 2520.0
margin_bottom = 114.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Build"

[node name="Progress" type="Button" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -20.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Age Wonders"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Undo" to="." method="_on_Undo_pressed"]
[connection signal="toggled" from="Lock" to="." method="_on_Lock_toggled"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="HBoxBuild/Culture" to="." method="_on_build_pressed" binds= [ 0 ]]
[connection signal="pressed" from="HBoxBuild/Economy" to="." method="_on_build_pressed" binds= [ 1 ]]
[connection signal="pressed" from="HBoxBuild/Military" to="." method="_on_build_pressed" binds= [ 4 ]]
[connection signal="pressed" from="HBoxBuild/Science" to="." method="_on_build_pressed" binds= [ 5 ]]
[connection signal="pressed" from="Progress" to="." method="_on_Progress_pressed"]
